Added auth controller with JWT, made some changes to data access
